fix: fix overflow for anchor jump

--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -8,7 +8,6 @@
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  max-width: variables.$screen-xs;
 
   @media screen and (min-width: variables.$screen-sm) {
     max-width: variables.$screen-sm;
