--- a/src/styles/utils/_margin.scss
+++ b/src/styles/utils/_margin.scss
@@ -48,6 +48,8 @@
   }
   
   .lg-mb-0 {margin-bottom: 0;}
+  .lg-mb-24 {margin-bottom: variables.$size-24;}
+  .lg-mb-40 {margin-bottom: variables.$size-40;}
 
   .lg-ml-0 {margin-left: 0;}
 }
