--- a/src/styles/utils/_overflow.scss
+++ b/src/styles/utils/_overflow.scss
@@ -3,4 +3,5 @@
 \*------------------------------------*/
 
 .overflow-hidden {overflow: hidden;}
+.overflow-clip {overflow: clip;}
 .overflow-y-auto {overflow-y: auto;}
