--- a/src/styles/utils/_padding.scss
+++ b/src/styles/utils/_padding.scss
@@ -69,12 +69,24 @@
     padding-top: variables.$size-24;
     padding-bottom: variables.$size-24;
   }
+  .lg-py-40 {
+    padding-top: variables.$size-40;
+    padding-bottom: variables.$size-40;
+  }
   .lg-py-80 {
     padding-top: variables.$size-80;
     padding-bottom: variables.$size-80;
+  }
+  .lg-py-96 {
+    padding-top: variables.$size-96;
+    padding-bottom: variables.$size-96;
   }
 
   .lg-pl-0 {padding-left: 0;}
   
   .lg-pr-40 {padding-right: variables.$size-40;}
+}
+
+@media screen and (min-width: variables.$screen-xl) {
+  .xl-pr-64 {padding-right: variables.$size-64;}
 }
