--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -12,18 +12,19 @@
 .font-medium {font-weight: 500;}
 .font-bold {font-weight: 700;}
 
+.leading-normal {line-height: 1;}
 .leading-18 {line-height: variables.$size-18;}
 .leading-20 {line-height: variables.$size-20;}
-.leading-21 {line-height: variables.$size-21;}
+.leading-24 {line-height: variables.$size-24;}
 .leading-28 {line-height: variables.$size-28;}
 .leading-30 {line-height: variables.$size-30;}
 
 .text-14 {font-size: variables.$size-14;}
 .text-16 {font-size: variables.$size-16;}
 .text-17 {font-size: variables.$size-17;}
-.text-24 {font-size: variables.$size-24;}
 .text-18 {font-size: variables.$size-18;}
-.text-30 {font-size: variables.$size-30;}
+.text-24 {font-size: variables.$size-24;}
+.text-32 {font-size: variables.$size-32;}
 
 .text-center {text-align: center;}
 .text-end {text-align: end;}
@@ -39,9 +40,14 @@
   .sm-text-end {text-align: end;}
 }
 
+@media screen and (min-width: variables.$screen-md) {
+  .md-text-30 {font-size: variables.$size-30;}
+}
+
 @media screen and (min-width: variables.$screen-lg) {
   .lg-text-left {text-align: left;}
   
+  .lg-text-32 {font-size: variables.$size-32;}
   .lg-text-44 {font-size: variables.$size-44;}
   
   .lg-leading-48 {line-height: variables.$size-48;}
